# KDEpy

./: .appveyor.yml  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  README_old.md  deploy.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yaml  build.yml  build_docs.yml  test-base.yml  test_base.yml  test_develop.yml  test_master.yml
KDEpy/: BaseKDE.py  FFTKDE.py  NaiveKDE.py  TreeKDE.py  __init__.py  binning.py  bw_selection.py  cutils.c  cutils.pyx  examples.py  kde.py  kernel_funcs.py  mirroring.py  profiling.py  test_kde.py  utils.py
KDEpy/cutils_ext/: cutils.pyx
KDEpy/sandbox/: akde1d.asv  akde1d.m  dct1d.m  fixed_point.asv  fixed_point.m  idct1d.m  kde.m  probfun.m  regEM.m  root.m  test.m
KDEpy/tests/: test_BaseKDE.py  test_FFTKDE.py  test_NaiveKDE.py  test_TreeKDE.py  test_api.py  test_binning.py  test_bw_selection.py  test_estimator_vs_estimator.py  test_kde.py  test_kernel_funcs.py  test_mirroring.py  test_sorted_grid.py
docs/: Makefile  make.bat
docs/presentation/: kde_bare.tex  kde_presentation.tex
docs/presentation/figs/: create_presentation_figs.ipynb  profiling.ipynb
docs/source/: API.rst  KDEpy.rst  README_examples.py  bandwidth.rst  comparison.rst  conf.py  example_stocks_kde.py  examples.py  examples.rst  index.rst  intro_kde.rst  introduction.ipynb  kde_animations.py  kernels.rst  literature.rst  modules.rst  notebook.ipynb  profiling.py
docs/source/_static/: custom.css
docs/source/_static/img/: create_images.ipynb
sandbox/: Existing implementations.ipynb  Numba testing.ipynb  Testing.ipynb  development.md
travis/: build-wheels.sh
