[project]
name = "KDEpy"
version = "1.1.12"
dependencies = [
    "numpy>=1.14.2",
    "scipy>=1.0.1,<2.0",
]
description = "Kernel Density Estimation in Python."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "tommyod", email = "tommy.odland@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/tommyod/KDEpy"

[project.optional-dependencies]
dev = [
    "sphinx<7",
    "numpydoc>=0.7.0",
    "nbsphinx==0.9.1",
    "ipython>=6.4.0",
    "build>=0.10.0",
    "matplotlib>=2.2.2"
]
test = [
    "pytest>=3.6.2",
    "matplotlib>=2.2.2"
]
lint = [
  "black",
  "flake8>=3.5.0",
]

[build-system]
requires = ["setuptools>=45", "wheel", "cython>=3.0,<4.0", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"
